# FaceCloak

./: .gitignore  IMPLEMENTATION_PLAN  README.md  ablation.py  app.py  benchmark_metrics.csv  benchmark_summary.md  benchmark_summary_eps001.md  eval.py  generate_notebook.py  main.py  profile_cloaking.py  pyproject.toml  rename_script.py  requirements.txt  run_task.py  technical_writeup.ipynb  universal_cloaking_demo.ipynb
ablations_tiny/: ablation_report.md  epsilon_ablation.csv  loss_ablation.csv  steps_ablation.csv
benchmarks/: README.md  ablation_manifest_small.csv  ablation_sample_manifest.csv  ablation_tiny_manifest.csv  benchmarking_manifest.csv  general_manifest.csv  sample_manifest.csv
facecloak/: __init__.py  ablation.py  benchmarking.py  cloaking.py  deploy.py  environment.py  errors.py  evaluation.py  interface.py  models.py  pipeline.py  project.py
results/: benchmark_metrics.csv  benchmark_phase14_metrics.csv  benchmark_phase14_summary.md  benchmark_report.md  benchmark_summary.json
results/ablations/: ablation_report.md  epsilon_ablation.csv  loss_ablation.csv  norm_ablation.csv  steps_ablation.csv  surrogate_transfer_matrix.csv
results/ablations_tiny/: norm_ablation.csv  surrogate_transfer_matrix.csv
scripts/: create_or_update_space.py  download_general_images.py  generate_report.py
tests/: test_ablation.py  test_cloaking.py  test_deploy.py  test_engine.py  test_environment.py  test_evaluation.py  test_integration.py  test_interface.py  test_losses.py  test_pipeline.py  test_project.py  test_transforms.py  test_visualize.py
tests/fixtures/: README.md
uacloak/: __init__.py  ablation.py  benchmarking.py  cloaking.py  deploy.py  environment.py  errors.py  evaluation.py  interface.py  models.py  pipeline.py  project.py  visualize.py
visioncloak/: __init__.py  engine.py  environment.py  errors.py  evaluation.py  interface.py  losses.py  models.py  pipeline.py  project.py  transforms.py
